# pi-notes

./: .gitignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: security-assessment.md  sync-design.md
e2e/: helpers.ts  tsconfig.json  wdio.conf.ts
e2e/specs/: accept-note.spec.ts  create-note.spec.ts  edit-note.spec.ts  empty-trash.spec.ts  move-to-trash.spec.ts
scripts/: release.sh
src/: App.test.tsx  App.tsx  api.ts  main.tsx  tags.test.ts  tags.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial_schema.sql
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  tags.rs
src-tauri/src/application/: mod.rs  service.rs
src-tauri/src/application/commands/: attachment.rs  collection.rs  mod.rs  note.rs  tag.rs
src-tauri/src/application/ports/: attachment_repository.rs  collection_reader.rs  collection_repository.rs  mod.rs  note_reader.rs  note_repository.rs  tag_repository.rs
src-tauri/src/application/queries/: attachment.rs  note.rs  tag.rs
src-tauri/src/domain/: attachment.rs  collection.rs  date.rs  error.rs  mod.rs  note.rs  tag.rs  wikilink.rs
src-tauri/src/infrastructure/: attachment_repository.rs  collection_repository.rs  mod.rs  note_repository.rs  schema.rs  sqlite_reader.rs  tag_repository.rs
src-tauri/src/ipc/: commands.rs  state.rs
src/components/: AddNotePanel.test.tsx  AddNotePanel.tsx  BlockEditor.test.tsx  BlockEditor.tsx  ContentEditor.test.tsx  Feed.tsx  (+19 more)
(+7 files in other folders)
