[package]
name = "pi-notes"
version = "0.1.0"
edition = "2021"

[lib]
name = "pi_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
base64 = "0.22"
