[package]
name = "pi-notes"
version = "0.0.2"
edition = "2021"

[lib]
name = "pi_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
base64 = "0.22"
uuid = { version = "1", features = ["v7"] }
open = "5"
